[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/dialogue/Dialog.gd" type="Script" id=1]
[ext_resource path="res://src/dialogue/DialogAnimator.gd" type="Script" id=2]
[ext_resource path="res://src/TextEffects/CharacterEffect.gd" type="Script" id=3]
[ext_resource path="res://src/dialogue/DialogPlayer.gd" type="Script" id=4]
[ext_resource path="res://assets/icons/triangle.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.8, 0.4, 0.705882 )
corner_radius_top_left = 16
corner_radius_top_right = 16

[sub_resource type="RichTextEffect" id=2]
script = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.8, 0.4, 0.705882 )
corner_radius_top_left = 16
corner_radius_top_right = 16

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943848
margin_top = -0.943878
margin_right = -0.943848
margin_bottom = -0.943848
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharactersContainer" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = 456.0
margin_right = -128.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="Panel" parent="Text"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="Text/Box"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 24
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Text/Box/Margin"]
margin_left = 32.0
margin_top = 16.0
margin_right = 752.0
margin_bottom = 104.0
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
scroll_following = true
custom_effects = [ SubResource( 2 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="Text/Box/Margin"]
visible = false
margin_left = 32.0
margin_top = 16.0
margin_right = 752.0
margin_bottom = 16.0
rect_clip_content = true
size_flags_vertical = 0

[node name="NameEdit" type="LineEdit" parent="Text"]
anchor_left = 0.0325521
anchor_top = -0.25
anchor_right = 0.31901
rect_min_size = Vector2( 220, 32 )
size_flags_horizontal = 3
custom_styles/read_only = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
align = 1
max_length = 20
editable = false
expand_to_text_length = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="Text/NameEdit"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogEndedIndicator" type="TextureRect" parent="Text"]
visible = false
margin_left = 694.0
margin_top = 76.0
margin_right = 727.0
margin_bottom = 109.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogPlayer" type="Node" parent="."]
script = ExtResource( 4 )

[node name="DialogAnimator" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="DialogAnimator"]
wait_time = 0.1

[node name="Tween" type="Tween" parent="DialogAnimator"]
